Dev-RBI/src/objects/List_of_Values__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <description>This field is used for Loan details for a Developer</description>
        <label>Bank Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Year__c</fullName>
        <label>Completion Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for Unit Report generation</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Unit Report Details</relationshipLabel>
        <relationshipName>UnitReport</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dev_Project_Address__c</fullName>
        <description>This will hold the address for the other projects by Developer</description>
        <label>Project Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_Project_Name__c</fullName>
        <label>Project Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the reference to the Account(developer) for other ongoing projects</description>
        <label>Developer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ongoing and Completed Projects</relationshipLabel>
        <relationshipName>OnGoingProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Description__c</fullName>
        <label>Document Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dwelling_Units__c</fullName>
        <label>Dwelling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <label>Entity Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Land_Area_in_Acres__c</fullName>
        <label>Land Area In Acres</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <description>This field is used for Loan details for a Developer</description>
        <label>Loan Amount (in Crs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Id_Const_Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Id for the Construction Loan taken by Developer</description>
        <label>Construction Loan for Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Construction Loan Details</relationshipLabel>
        <relationshipName>ConstructionLoan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <formula>Unit__r.Tower_Id__r.Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_BUA__c</fullName>
        <label>Total BUA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tower_Id__c</fullName>
        <formula>Unit__r.Tower_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tower Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Report_Gen_Date__c</fullName>
        <label>Unit Report Generated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for Unit Report generation</description>
        <label>Unit</label>
        <referenceTo>Unit__c</referenceTo>
        <relationshipLabel>Unit Report Details</relationshipLabel>
        <relationshipName>UnitReport</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>List of Values</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Entity_Name__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Key__c</columns>
        <columns>Value__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Document_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>List of Values Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I90000000kCTDEA2_00N900000059ENjEAM</fullName>
        <active>true</active>
        <field>Project_Cust_Packages__c.List_of_Values__c</field>
        <filterItems>
            <field>List_of_Values__c.Entity_Type__c</field>
            <operation>equals</operation>
            <value>Package</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Customer Package_List of Values</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I90000000nxDsEAI_00N90000004wfzFEAQ</fullName>
        <active>true</active>
        <field>Infrastructure_Near_Project__c.Infrastructure_Near_Project__c</field>
        <filterItems>
            <field>List_of_Values__c.Entity_Type__c</field>
            <operation>equals</operation>
            <value>Public Convenience</value>
        </filterItems>
        <filterItems>
            <field>List_of_Values__c.Entity_Name__c</field>
            <operation>equals</operation>
            <value>Infrastructure Near Project Site</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Infrastructure Near Project_Infrastructu</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IO0000000917YMAQ_00NO0000000rjlgMAA</fullName>
        <active>true</active>
        <field>Project_Document_Status__c.Project_Document__c</field>
        <filterItems>
            <field>List_of_Values__c.Entity_Type__c</field>
            <operation>equals</operation>
            <value>Document</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Project Document_Project Document</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IO0000000917ZMAQ_00NO0000000rjlqMAA</fullName>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <field>Project_Feedback__c.List_of_Values_Id__c</field>
        <filterItems>
            <field>List_of_Values__c.Entity_Type__c</field>
            <operation>equals</operation>
            <value>Remark</value>
        </filterItems>
        <filterItems>
            <field>List_of_Values__c.Entity_Name__c</field>
            <operation>equals</operation>
            <value>Statutory Approval</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Project Feedback_Feedback</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IO0000000D6QEMA0_00NO0000000gxEcMAI</fullName>
        <active>true</active>
        <field>Payment_Plan__c.Plan_Type__c</field>
        <filterItems>
            <field>List_of_Values__c.Entity_Type__c</field>
            <operation>equals</operation>
            <value>Payment Plan</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Payment Plan_Plan Type</name>
    </namedFilters>
    <pluralLabel>List of Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>